--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Login | Instajeju</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -21,7 +22,7 @@
             <input type="submit" value="Log in" />
           </form>
           <span class="login__divider">or</span>
-          <a href="#" class="login__fb-link">Log in with Facebook</a>
+          <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="#" class="login__fb-link">Log in with Facebook</a>
           <a href="#" class="login__link login__link--small">Forgot password?</a>
         </div>
         <div class="login__box">
@@ -38,6 +39,23 @@
       </div>
     </main>
 
+<footer class="footer">
+  <nav class="footer__nav">
+    <ul class="footer__list">
+      <li class="footer__list-item"><a href="" class="footer__link">about us</a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+      <li class="footer__list-item"><a href="" class="footer__link"></a></li>
+    </ul>
+  </nav>
+  <span class="footer__copy">&copy; 2017 instagram</span>
+</footer>
   </body>
 
 </html>
