--- a/feed.html
+++ b/feed.html
@@ -16,7 +16,7 @@
    <input type="text"
           placeholder="Search"
           class="navigation__input">
-   <div class="nativation__icons">
+   <div class="navigation__icons">
      <a href="explore.html"
         class="navigation__links"><i class="fa fa-compass"></i></a>
      <a href="#"
@@ -26,7 +26,40 @@
    </div>
  </nav>
 
-    feed
+ <main class="feed">
+
+   <div class="photo">
+     <header class="photo__header">
+       <a href="profile.html"
+          class="photo__thumb"><img src="images/avatar.jpg"></a>
+       <span class="photo__username">serranoarevalo</span>
+     </header>
+     <img src="images/feedPhoto.jpg"
+          class="photo__image">
+     <div class="photo__info">
+       <div class="photo__actions">
+         <i class="fa fa-heart-o"></i>
+         <i class="fa fa-comment-o"></i>
+       </div>
+
+       <span class="photo__likes">5,393 likes</span>
+       <ul class="photo__comments">
+         <li class="photo__comment"><span class="photo__comment-author">daekeonkim</span> <a href="profile.html">@unknownuser</a>,this is awesome!</li>
+         <li class="photo__comment"><span class="photo__comment-author">daekeonkim</span> Hello?</li>
+         <li class="photo__comment"><span class="photo__comment-author">daekeonkim</span> Hello?</li>
+         <li class="photo__comment"><span class="photo__comment-author">daekeonkim</span> Can you hear me?</li>
+       </ul>
+       <span class="photo__date">12 hours ago</span>
+       <div class="photo__add-comment">
+         <textarea placeholder="Add comment..."></textarea>
+         <i class="fa fa-ellipsis-h"></i>
+       </div>
+     </div>
+
+   </div>
+
+ </main>
+  
 
     <footer class="footer">
       <nav class="footer__nav">
