--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
    <input type="text"
           placeholder="Search"
           class="navigation__input">
-   <div class="nativation__icons">
+   <div class="navigation__icons">
      <a href="explore.html"
         class="navigation__links"><i class="fa fa-compass"></i></a>
      <a href="#"
