--- a/explore.html
+++ b/explore.html
@@ -27,6 +27,25 @@
  </nav>
 
    explore
+   <main class="explore">
+
+
+       <ul class="users__list">
+         <li class="users__user">
+          <div class="users__user-left-col">
+            <img src="images/avatar.jpg" alt="" class="users__thumb">
+            <span class="users__user-id">dj_gpark</span>
+            <span class="user__user-description">박명수</span>
+          </div>
+
+          <div class="users__user-right-col">
+            <button class="users__follow">Follow</button>
+          </div>
+
+         </li>
+       </ul>
+
+   </main>
 
     <footer class="footer">
       <nav class="footer__nav">
