--- a/feed.html
+++ b/feed.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>feed | Instajeju</title>
+    <link rel="shortcut icon" href="images/favicon.ico"
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
 
@@ -59,7 +60,7 @@
    </div>
 
  </main>
-  
+
 
     <footer class="footer">
       <nav class="footer__nav">
