--- a/edit-profile.html
+++ b/edit-profile.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="images/favicon.ico"
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> </head>
+  <link rel="stylesheet" href="css/styles.css">
 
 <body>
   <nav class="navigation"> <a href="feed.html"><img src="images/logo.png" class="navigation__logo"></a> <input type="text"
