--- a/feed.html
+++ b/feed.html
@@ -6,6 +6,7 @@
     <title>feed | Instajeju</title>
     <link rel="shortcut icon" href="images/favicon.ico"
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
