--- a/image-detail.html
+++ b/image-detail.html
@@ -8,6 +8,7 @@
           href="images/favicon.ico">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" /> </head>
+    <link rel="stylesheet" href="css/styles.css">
 
   <body>
     <nav class="navigation"> <a href="feed.html"><img src="images/logo.png"
