--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Login | Instajeju</title>
-    <link rel="shortcut icon" href="images/favicon.ico"
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -24,7 +24,7 @@
             <input type="submit" value="Log in" />
           </form>
           <span class="login__divider">or</span>
-          <i class="fa fa-facebook-square" aria-hidden="true"></i><a href="#" class="login__fb-link">Log in with Facebook</a>
+          <a href="#" class="login__fb-link"><i class="fa fa-facebook-square" aria-hidden="true"></i>Log in with Facebook</a>
           <a href="#" class="login__link login__link--small">Forgot password?</a>
         </div>
         <div class="login__box">
