--- a/explore.html
+++ b/explore.html
@@ -3,69 +3,86 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>explore | Instajeju</title>
-    <link rel="shortcut icon" href="images/favicon.ico"
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>Explore | Instajeju</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+" />
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-
-
     <nav class="navigation">
-   <a href="feed.html"><img src="images/logo.png"
-        class="navigation__logo" /></a>
-   <input type="text"
-          placeholder="Search"
-          class="navigation__input">
-   <div class="navigation__icons">
-     <a href="explore.html"
-        class="navigation__links"><i class="fa fa-compass"></i></a>
-     <a href="#"
-        class="navigation__links"><i class="fa fa-heart-o"></i></a>
-     <a href="profile.html"
-        class="navigation__links"><i class="fa fa-user-o"></i></a>
-   </div>
- </nav>
-
-   explore
-   <main class="explore">
-
-
-       <ul class="users__list">
-         <li class="users__user">
-          <div class="users__user-left-col">
-            <img src="images/avatar.jpg" alt="" class="users__thumb">
-            <span class="users__user-id">dj_gpark</span>
-            <span class="user__user-description">박명수</span>
+      <a href="feed.html">
+        <img src="images/logo.png"  class="navigation__logo" />
+      </a>
+      <input type="text" placeholder="Serach" class="navigation__input">
+      <div class="navigation__icons">
+        <a href="explore.html" class="navigation__links">
+          <i class="fa fa-compass"></i>
+        </a>
+        <a href="#" class="navigation__links">
+          <i class="fa fa-heart-o"></i>
+        </a>
+        <a href="profile.html" class="navigation__links">
+          <i class="fa fa-user-o"></i>
+        </a>
+      </div>
+    </nav>
+    <main class="explore">
+      <ul class="users">
+        <li class="users__user">
+          <div class="users__left">
+            <a href="profile.html">
+              <img src="images/avatar.jpg" />
+            </a>
+            <div class="users__name">
+              <span class="users__username">serranoarevalo</span>
+              <span class="users__full-name">Nicolás Serrano Arévalo</span>
+            </div>
           </div>
-
-          <div class="users__user-right-col">
-            <button class="users__follow">Follow</button>
+          <button>Follow</button>
+        </li>
+        <li class="users__user">
+          <div class="users__left">
+            <a href="profile.html">
+              <img src="images/avatar.jpg" />
+            </a>
+            <div class="users__name">
+              <span class="users__username">serranoarevalo</span>
+              <span class="users__full-name">Nicolás Serrano Arévalo</span>
+            </div>
           </div>
-
-         </li>
-       </ul>
-
-   </main>
-
+          <button>Follow</button>
+        </li>
+        <li class="users__user">
+          <div class="users__left">
+            <a href="profile.html">
+              <img src="images/avatar.jpg" />
+            </a>
+            <div class="users__name">
+              <span class="users__username">serranoarevalo</span>
+              <span class="users__full-name">Nicolás Serrano Arévalo</span>
+            </div>
+          </div>
+          <button>Follow</button>
+        </li>
+      </ul>
+    </main>
     <footer class="footer">
       <nav class="footer__nav">
         <ul class="footer__list">
-          <li class="footer__list-item"><a href="" class="footer__link">about us</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">support</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">blog</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">press</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">api</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">jobs</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">privacy</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">terms</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">directory</a></li>
-          <li class="footer__list-item"><a href="" class="footer__link">directory</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">about us</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">support</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">blog</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">press</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">api</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">jobs</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">privacy</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">terms</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">directory</a></li>
+          <li class="footer__list-item"><a href="#" class="footer__link">language</a></li>
         </ul>
-      </nav>
-      <span class="footer__copy">&copy; 2017 instagram</span>
-    </footer>
+      </nav> <span class="footer__copy">© 2017 instagram</span> </footer>
   </body>
 
 </html>
