--- a/feed.html
+++ b/feed.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>feed | Instajeju</title>
-    <link rel="shortcut icon" href="images/favicon.ico"
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -25,7 +25,7 @@
         class="navigation__links"><i class="fa fa-heart-o"></i></a>
      <a href="profile.html"
         class="navigation__links"><i class="fa fa-user-o"></i></a>
-   </div>
+    </div>
  </nav>
 
  <main class="feed">
