--- a/image-detail.html
+++ b/image-detail.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Image Detail | Instajeju</title>
     <link rel="shortcut icon"
           href="images/favicon.ico">
@@ -38,7 +39,7 @@
             <li class="photo__comment"><span class="comments__username">daekeonkim</span>Can you hear me?</li>
           </ul>
           <div class="photo__actions">
-            <i class="fa fa-heart-o"></i>
+            <i class="fa fa-heart"></i>
             <i class="fa fa-comment-o"></i>
           </div>
           <span class="photo__likes">5,393 likes</span>
