--- a/edit-profile.html
+++ b/edit-profile.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Edit Profile | Instajeju</title>
   <link rel="shortcut icon" href="images/favicon.ico"
   <link rel="stylesheet"
